Fixes ad spacing and font size

--- a/stylesheets/base.scss
+++ b/stylesheets/base.scss
@@ -5,7 +5,7 @@ $yellow: rgb(254, 233, 000);
 h1 {
   margin-top: 50px;
   font-family: $font;
-  font-weight: 400;
+  font-weight: regular;
   text-transform: uppercase;
   width: 100%;
 }
