--- a/stylesheets/image-title-mobile.scss
+++ b/stylesheets/image-title-mobile.scss
@@ -1,3 +1,4 @@
+/*connector is the name of the div that connects the img opacity hover and the header switch hover, and can implement both by using a connector:hover feature*/
 .s1 {
   position: relative;
   .connector {
@@ -109,7 +110,7 @@
     }
     h3 {
       position: absolute;
-      margin-left: 95px;
+      margin-left: 85px;
       margin-top: -230px;
       margin-bottom: 80px;
       text-align: center;
