--- a/stylesheets/layout_desktop.scss
+++ b/stylesheets/layout_desktop.scss
@@ -198,15 +198,11 @@ must be behind the stories(use z-index)*/
     }
   }
   .ad {
-    float:right;
+    margin-left: 77.7%;
     img {
-      margin-top: 0px;
-      position: absolute;
-      float: right;
-      top: -120px;
-      left: 1047px;
-      width: 340px;
-      height: 240px;
+      margin-top: -100px;
+      width: 300px;
+      height: 250px;
       border:20px solid white;
     }
   }
