--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,7 +7,7 @@ html {
 h1 {
   margin-top: 50px;
   font-family: Helvetica, Arial, sans-serif;
-  font-weight: 400;
+  font-weight: regular;
   text-transform: uppercase;
   width: 100%; }
 
@@ -209,6 +209,7 @@ p {
     width: 300px;
     height: 200px; }
 
+/*connector is the name of the div that connects the img opacity hover and the header switch hover, and can implement both by using a connector:hover feature*/
 .s1 {
   position: relative; }
   .s1 .connector img {
@@ -294,7 +295,7 @@ p {
     opacity: 1; }
   .s2 .connector h3 {
     position: absolute;
-    margin-left: 95px;
+    margin-left: 85px;
     margin-top: -230px;
     margin-bottom: 80px;
     text-align: center;
@@ -513,15 +514,11 @@ p {
         height: 510px;
         width: 560px; }
     .stories .ad {
-      float: right; }
+      margin-left: 77.7%; }
       .stories .ad img {
-        margin-top: 0px;
-        position: absolute;
-        float: right;
-        top: -120px;
-        left: 1047px;
-        width: 340px;
-        height: 240px;
+        margin-top: -100px;
+        width: 300px;
+        height: 250px;
         border: 20px solid white; }
 
   .s1 {
